src/css/style.css
:root {
  --v-gold: #b89a5e; /*#d6b76f;*/
  --v-red: #ed1846;
  --custom-gray: #f2f2f2;
  --custom-white: #fefefe;
  --custom-grey: #f9f9f9;
  --white: white;
  --onest-sans-serif: "Onest";
  /* --v-gold-90: rgba(214, 183, 111, 0.9); */
  --v-gold-90: rgba(184, 154, 94, 0.9);
  --v-red-90: rgba(237, 24, 70, 0.9);
  /* --box-sadow: 3px 3px 5px rgba(214, 183, 111, 0.9); */
  --box-sadow: 3px 3px 5px rgba(184, 154, 94, 0.9);
  --contrast: #4a4a4a;
}

.arizonia {
  font-family: "Arizonia", cursive;
  font-weight: 400;
  font-style: normal;
}

.gold {
  color: var(--v-gold);
}

*,
*:before,
*:after {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

html {
  font-size: 10px;
}

/* REGLES LAYOUTS */

body {
  display: grid;
  min-height: 100dvh;
  grid-template-rows: auto 1fr auto;
  text-align: center;
  line-height: 1.6;
  max-width: 100%;
  background: var(--custom-white);
  font-size: 1.6rem;
  font-family: var(--onest-sans-serif), sans-serif;
}

header {
  width: 100%;
  max-width: 100%;
  padding: 1rem 0;
  background: var(--custom-grey);
  position: sticky;
  top: 0;
  z-index: 1000;
}

/*main {*/
/*    padding-bottom: 3rem;*/
/*}*/

footer {
  padding: 1rem 0;
  background: var(--custom-grey);
}

q {
  quotes: "“" "”" "‘" "’";
}

.container-section,
.container {
  max-width: 100%;
  width: 100%;
  margin: 0 auto;
}

.container-section {
  display: grid;
  gap: 4rem;
  grid-template-rows: auto 1fr;
  align-items: center;
  justify-items: center;
  align-content: center;
}

.container-section.presentation{
  padding-bottom: 0;
}

.container.last {
  width: 100%;
  height: 100%;
}

ul li {
  list-style: none;
}

a {
  text-decoration: none;
}

/* ##################################### CSS MENU ################################### */
/*TODO RESPONSIVE*/

.header-container {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  justify-content: space-between;
  align-items: center;
  align-content: center;
  text-align: left;
  font-size: 2.4rem;
}

.logo {
  width: 20rem;
  height: 11rem;
}

.hamburger-icon {
  display: none;
}

.hamburger-icon input[type="checkbox"] {
  appearance: none;
}

.logo-img {
  display: block;
  width: 100%;
  height: 100%;
  margin-left: -50px;
  margin-right: -50px;
}

.logo-img:hover .logo-inside path {
  fill: var(--v-red);
}

menu {
  width: 60%;
  height: 100%;
  float: right;
}

.menu,
.burger {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  align-content: center;
  justify-content: space-between;
  align-items: center;
  height: 100%;
}

.burger {
  float: right;
  font-size: 2.4rem;
  list-style: none;
  justify-content: space-evenly;
  gap: 2.5rem;
}

.burger li {
  display: inline-block;
  margin: 0;
}

.content-section-presentation:hover h2,
.container-section:hover h2,
.burger li a:hover:not(.burger-menu-active a) {
  border-bottom: 3px solid var(--v-red);
  border-bottom-left-radius: 5px;
  border-bottom-right-radius: 5px;
}

.content-section-presentation h2,
.container-section h2,
.burger-menu-active a {
  border-bottom: 3px solid var(--v-gold);
  border-bottom-left-radius: 5px;
  border-bottom-right-radius: 5px;
}

table a,
nav a {
  font-weight: bold;
  color: var(--v-gold);
}

.burger-menu-active a {
  color: var(--v-red);
}

.fa-x {
  display: none;
}

/* ##################################### CSS FOOTER ################################### */

.footer {
  color: var(--contrast);
  font-size: 1.4rem;
  font-weight: 500;
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  align-items: center;
  place-content: center space-between;
  flex-wrap: wrap;
}

.footer-logo-autor,
.follow,
.legal {
  display: grid;
  row-gap: 0.5rem;
  justify-items: center;
}

.follow {
  row-gap: 2rem;
}

.follow ul {
  display: flex;
  gap: 1rem;
  align-items: center;
}

.footer-menu a,
.follow a,
.legal a {
  color: var(--contrast);
}

.footer-menu a:hover,
.follow a:hover,
.legal a:hover {
  color: var(--v-red);
}

.follow svg {
  width: 2.5rem;
  height: 2.5rem;
  fill: var(--contrast);
}

.follow svg:hover {
  fill: var(--v-red);
}

/* ##################################### CSS IMAGEN PRINCIPAL ################################### */
.background-viana-hello-popup {
  background-image: linear-gradient(rgba(0, 0, 0, 0.48), rgba(0, 0, 0, 0.48)),
    url(../img/festas-3-crop-80.jpg);
  background-size: cover;
  background-repeat: no-repeat;
  background-position: center; /* Alinea la imagen en la parte inferior */
  color: var(--white);
  max-width: 40rem;
  max-height: 50rem;
  width: 100%;
  height: 100%;
  aspect-ratio: 950/1100;
  display: grid;
  align-content: space-between;
  font-family: var(--onest-sans-serif), sans-serif;
  font-size: 1.8rem;
}

.background-viana-hello .swal-title {
  color: var(--white);
}

#view-viana,
#view-viana-category-detail,
#view-viana-category,
#view-viana-presentacio {
  position: relative;
  overflow: hidden;
  width: 100%;
  max-width: 100%;
  max-height: 45rem;
  color: var(--white);
}

#view-viana {
  min-height: 65rem;
}


#view-viana .background-image img,
#view-viana-category-detail .background-image img,
#view-viana-category .background-image img,
  #view-viana-presentacio .background-image img {
  width: 100%;
  height: 100%;
  object-position: top;
  object-fit: cover;
  display: block;
  position: absolute;
  z-index: -1;
  filter: brightness(0.55);
}

/* #view-viana-category {
  background-image: linear-gradient(rgba(0, 0, 0, 0.45), rgba(0, 0, 0, 0.45)),
    url(../img/viana-2.jpg);
  background-size: cover;
  background-repeat: no-repeat;
  background-position: center;
  width: 100%;
  max-width: 100%;
  color: var(--white);
} */

/* #view-viana-category-detail {
  background-image: linear-gradient(rgba(0, 0, 0, 0.45), rgba(0, 0, 0, 0.45)),
    url(../img/santa-luzia-10-2190h-1.webp);
  background-size: cover;
  background-repeat: no-repeat;
  background-position: center;
  width: 100%;
  max-width: 100%;
  color: var(--white);
} */
/* ... */

